--- a/Voca/src/Components/MainPage/MainPage.css
+++ b/Voca/src/Components/MainPage/MainPage.css
@@ -182,6 +182,30 @@
   height: 92%;
 }
 
+.message-container {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.message-box {
+  background-color: #1a237e;
+  border-radius: 20px;
+  padding: 10px 20px;
+  max-width: 100%;
+  word-wrap: break-word;
+}
+
+.username {
+  color: #ffffff;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.text {
+  color: #ffffff;
+  white-space: pre-wrap;
+}
+
 .input_message_box {
   border-radius: 50px;
   width: calc(100% - 50px - 10px);
