--- a/Voca/src/Components/MainPage/MainPage.css
+++ b/Voca/src/Components/MainPage/MainPage.css
@@ -182,8 +182,18 @@
   height: 92%;
 }
 
+.chat-container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  max-width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
+
 .message-container {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 10px;
 }
 
@@ -191,7 +201,8 @@
   background-color: #1a237e;
   border-radius: 20px;
   padding: 10px 20px;
-  max-width: 100%;
+  max-width: 70%;
+  align-self: flex-start;
   word-wrap: break-word;
 }
 
