--- a/Voca/src/Components/MainPage/MainPage.css
+++ b/Voca/src/Components/MainPage/MainPage.css
@@ -29,7 +29,9 @@
   align-items: center;
   justify-content: flex-start;
   outline: 1px solid black;
-  height: 5.6%;
+  height: 5.2%;
+  position: relative;
+  z-index: 2;
 }
 
 .group_chat_list {
@@ -103,7 +105,6 @@
   height: auto;
   margin-right: 5%;
   margin-left: 5%;
-  margin-top: 3%;
 }
 
 .username_box {
