--- a/Voca/src/Components/MainPage/MainPage.css
+++ b/Voca/src/Components/MainPage/MainPage.css
@@ -67,9 +67,15 @@
 .search-icon {
   position: absolute;
   left: 10px;
-  pointer-events: none;
   width: 20px;
   height: auto;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.search-icon:hover {
+  cursor: pointer;
+  transform: scale(1.3);
 }
 
 .search-container input[type="text"] {
