--- a/client-vite/src/Components/MainPage/MainPage.css
+++ b/client-vite/src/Components/MainPage/MainPage.css
@@ -29,7 +29,7 @@
   align-items: center;
   justify-content: flex-start;
   outline: 1px solid black;
-  height: 5.2%;
+  flex-grow: 1;
   position: relative;
   z-index: 2;
 }
