--- a/client-vite/src/Components/MainPage/MainPage.css
+++ b/client-vite/src/Components/MainPage/MainPage.css
@@ -29,7 +29,7 @@
   align-items: center;
   justify-content: flex-start;
   outline: 1px solid black;
-  flex-grow: 1;
+  flex-grow: 0;
   position: relative;
   z-index: 2;
 }
@@ -165,6 +165,7 @@
 
 .text_box {
   position: relative;
+  margin-top: 1%;
 }
 
 .input_chat_box {
